--- a/package.json
+++ b/package.json
@@ -11,18 +11,30 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
+    "@react-navigation/native": "^7.1.26",
+    "@react-navigation/stack": "^7.6.13",
     "expo": "~52.0.23",
+    "expo-document-picker": "~13.0.3",
+    "expo-file-system": "~18.0.12",
+    "expo-sharing": "~13.0.1",
+    "expo-sqlite": "~15.1.4",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-blob-util": "^0.24.6",
+    "react-native-pdf": "^7.0.3",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "react-native-svg": "15.8.0"
+    "react-navigation": "^5.0.0",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/react": "~18.3.12",
     "eslint": "^8.57.0",
     "eslint-config-expo": "~8.0.1",
     "eslint-config-prettier": "^9.1.0",
